UpdateUpdate - Skończona praca 98%Google+Autoryzacja(accountType)

--- a/JobSearch/Components/Account/Pages/ForgotPassword.razor
+++ b/JobSearch/Components/Account/Pages/ForgotPassword.razor
@@ -12,25 +12,33 @@
 @inject NavigationManager NavigationManager
 @inject IdentityRedirectManager RedirectManager
 
-<PageTitle>Forgot your password?</PageTitle>
+<PageTitle>Zapomniałeś hasła?</PageTitle>
 
-<h1>Forgot your password?</h1>
-<h2>Enter your email.</h2>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="row justify-content-center pt-5">
+    <div class="col-12 text-center">
+        <h1>Zapomniałeś hasła?</h1>
+        <h2 class="header-subtitle-login">Wprowadź swój adres e-mail, aby otrzymać link do resetowania hasła.</h2>
+    </div>
+</div>
+
+<div class="row justify-content-center">
+    <div class="col-md-6 col-lg-4 login-card-section">
         <EditForm Model="Input" FormName="forgot-password" OnValidSubmit="OnValidSubmitAsync" method="post">
             <DataAnnotationsValidator />
+
+            <hr />
             <ValidationSummary class="text-danger" role="alert" />
 
             <div class="form-floating mb-3">
                 <InputText @bind-Value="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                <label for="email" class="form-label">Email</label>
+                <label for="email" class="form-label">Adres e-mail</label>
                 <ValidationMessage For="() => Input.Email" class="text-danger" />
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Reset password</button>
+
+            <button type="submit" class="w-100 btn btn-lg btn-primary mt-3">Wyślij link do resetowania</button>
+
         </EditForm>
-     </div>
+    </div>
 </div>
 
 @code {
@@ -44,6 +52,7 @@
         {
             // Don't reveal that the user does not exist or is not confirmed
             RedirectManager.RedirectTo("Account/ForgotPasswordConfirmation");
+            return;
         }
 
         // For more information on how to enable account confirmation and password reset please
@@ -61,8 +70,8 @@
 
     private sealed class InputModel
     {
-        [Required]
-        [EmailAddress]
+        [Required(ErrorMessage = "Pole Email jest wymagane.")]
+        [EmailAddress(ErrorMessage = "Nieprawidłowy format Email.")]
         public string Email { get; set; } = "";
     }
 }
