--- a/JobSearch/Components/Layout/MainLayout.razor
+++ b/JobSearch/Components/Layout/MainLayout.razor
@@ -1,6 +1,21 @@
 ﻿@inherits LayoutComponentBase
 @using JobSearch.Components.Layout
 
+<!-- Dynamiczne tło z kulkami -->
+<div class="background-balls">
+    <div class="ball"></div>
+    <div class="ball"></div>
+    <div class="ball"></div>
+    <div class="ball"></div>
+    <div class="ball"></div>
+
+</div>
+
+<!-- Gwiazdki -->
+<div id="star-1" class="dynamic-star"></div>
+<div id="star-2" class="dynamic-star"></div>
+<div id="star-3" class="dynamic-star"></div>
+
 <div class="page">
     <div class="sidebar">
         <NavMenu />
